PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Add FileFormat optional tag to result parser with CSV support
- pts-core: Add debug-render-test for helping to optimize the graph/result rendering process
- pts-core: Rendering optimizations when handling lots of result files / graphs / result identifiers
- phodevi: AMDGPU Linux detection improvements

Phoronix Test Suite 6.0 Milestone 1
26 August 2015

- pts-core: Show estimated date/time next to estimated duration left on tests
- pts-core: Support /usr/lib/os-release for stateless systems
- pts-core: Allow listing multiple items via the info sub-command
- pts-core: Add new test profile parsing back-end
- pts-core: Unconditionally always ensure __GL_SYNC_TO_VBLANK=0
- pts-core: Fixes for test profile validation following recent restructuring
- pts-core: WebSocket fixes
- pts-core: Fix bash completion
- phoromatic: Improvements when server addressing setup fails
- pts_Graph: Support reporting a min result on graphs when there is no max value to be reported
- toggle_screensaver: GNOME 3 update
- perf_per_dollar: Add performance-per-dollar calculator module based on environment variable input
- system_monitor: Support reporting a meta/overall performance-per-Watt result at end of result file when activated
- phodevi: Add BcacheFS superblock

Phoronix Test Suite 5.8.1
23 June 2015

- pts-core: Misc warning fixes
- pts-core: Fix result file validation against XML schema
- pts-core: Never show /boot/efi as possible benchmark writable mount point
- pts-core: Don't report which errors on launcher
- phoromatic: Add button to schedules page to allow skipping current trigger
- phoromatic: Pass extra attributes during PDF generation to allow for PDF sorting, etc
- phoromatic: Allow basic sub-targeting as part of test schedule trigger URLs
- phoromatic: Enhancements to the main page
- phoromatic: Result tracker detection improvements
- phoromatic: Sort systems on main page

Phoronix Test Suite 5.8-Belev