@@ -216,18 +216,18 @@ class pts_test_execution
 			{
 				if(isset($monitor_result) && $monitor_result != 0)
 				{
-					$test_run_request->active_result = $monitor_result;
+					$test_run_request->active['result'] = $monitor_result;
 				}
 				else
 				{
 					pts_test_result_parser::parse_result($test_run_request, $test_extra_runtime_variables['LOG_FILE']);
 				}
 
-				pts_client::test_profile_debug_message('Test Result Value: ' . $test_run_request->active_result);
+				pts_client::test_profile_debug_message('Test Result Value: ' . $test_run_request->active['result']);
 
-				if(!empty($test_run_request->active_result))
+				if(isset($test_run_request->active['result']) && !empty($test_run_request->active['result']))
 				{
-					if($test_run_time < 3 && intval($test_run_request->active_result) == $test_run_request->active_result && $test_run_request->test_profile->get_estimated_run_time() > 60)
+					if($test_run_time < 3 && intval($test_run_request->active['result']) == $test_run_request->active['result'] && $test_run_request->test_profile->get_estimated_run_time() > 60)
 					{
 						// If the test ended in less than 3 seconds, outputted some int, and normally the test takes much longer, then it's likely some invalid run
 						self::test_run_instance_error($test_run_manager, $test_run_request, 'The test run ended prematurely.');
@@ -244,7 +244,7 @@ class pts_test_execution
 					}
 					else
 					{
-						$test_run_request->test_result_buffer->add_test_result(null, $test_run_request->active_result, null, null, $test_run_request->active_min_result, $test_run_request->active_max_result);
+						$test_run_request->test_result_buffer->add_test_result(null, $test_run_request->active['result'], null, null, (isset($test_run_request->active['min-result']) ? $test_run_request->active['min-result'] : null), (isset($test_run_request->active['max-result']) ? $test_run_request->active['max-result'] : null));
 					}
 				}
 				else if($test_run_request->test_profile->get_display_format() != 'NO_RESULT')
@@ -264,7 +264,7 @@ class pts_test_execution
 
 				if($allow_cache_share && !is_file($cache_share_pt2so))
 				{
-					$cache_share->add_object('test_results_output_' . $i, $test_run_request->active_result);
+					$cache_share->add_object('test_results_output_' . $i, (isset($test_run_request->active['result']) ? $test_run_request->active['result'] : null));
 					$cache_share->add_object('log_file_location_' . $i, $test_extra_runtime_variables['LOG_FILE']);
 					$cache_share->add_object('log_file_' . $i, (is_file($test_log_file) ? file_get_contents($test_log_file) : null));
 				}
